fix: replace wildcard CORS headers with explicit list
When allowCredentials is true, browsers reject Access-Control-Allow-Headers: *
per the Fetch spec — the wildcard is treated as a literal '*' not 'all headers'.
Since the frontend uses withCredentials: true, preflight requests were failing
with 403. Now explicitly list Authorization, Content-Type, Accept, X-Return-Token,
X-API-Key, X-Device-Id, X-Requested-With, Origin, Referer.